2001-10-10  Don Porter	<dgp@users.sourceforge.net>

	* tests/unixInit.test:  Corrected restore of ::env(LANG).

2001-10-10  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdMZ.c: Removed pointless #include and SCAN_* flags.
	(Tcl_RegexpObjCmd): Fixed match area offset bug.
	(Tcl_StringObjCmd): Fixed STR_INDEX and STR_REPEAT, and tidied up
	STR_IS and STR_LENGTH.

2001-10-09  Miguel Sofer  <msofer@users.sourceforge.net>
	
	* generic/tclObj.c: removed duplicate definition of tclObjsAlloced
	and tclObjsFreed. These variables only exist when compiling with
	TCL_COMPILE_STATS, and are already defined in generic/tclExecute.c

2001-10-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclFileName.c (ExtractWinRoot): corrected ABR error

	* doc/bgerror.n: back-port from 8.4 that indicates new behavior of
	bgerror in Tk.

2001-10-09  Miguel Sofer  <msofer@users.sourceforge.net>
	
	* generic/tclLiteral.c: (TclReleaseLiteral) reverted previous
	patch for [Bug 467523] - cure is worse than the illness.

2001-10-09  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/io.test (io-32.8): Fixed typo.

2001-10-08  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/cmdIL.test: test improvement.
	* doc/lsort.n: Doc improvement.
	* generic/tclCmdIL.c (InfoBodyCmd): Strengthened bytecode
	isolation [fix orig. by Miguel Sofer]
	(Tcl_LsortObjCmd, SortCompare): Symbolic indexing values plus
	correct handling of indexing relative to end in [lsort].

2001-10-05  Miguel Sofer  <msofer@users.sourceforge.net>
	
	* generic/tclLiteral.c: (TclReleaseLiteral) insured that
	self-referential bytecodes are properly cleaned up on interpreter
	deletion [Bug 467523] (Ronnie Brunner)

2001-10-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/encoding/cp1250.enc:
	* library/encoding/cp1251.enc:
	* library/encoding/cp1252.enc:
	* library/encoding/cp1253.enc:
	* library/encoding/cp1254.enc:
	* library/encoding/cp1255.enc:
	* library/encoding/cp1256.enc:
	* library/encoding/cp1257.enc: